# weekly-reports

./: .env  .gitignore  QUICK_START.md  README.md  TECHNICAL_DETAILS.md  db_arbitrage.csv  download_to_csv.py  env.example  index.js  main.py  main2_markdown_to_pdf.py  md.py  md_summary.py  package-lock.json  package.json  pdf_plot.py  pyproject.toml  quotes_USUI.csv  quotes_uADA.csv  quotes_uAPT.csv  quotes_uBERA.csv  quotes_uBTC.csv  quotes_uDOGE.csv  quotes_uLINK.csv  quotes_uNEAR.csv  quotes_uPEPE.csv  quotes_uSEI.csv  quotes_uSHIB.csv  quotes_uSOL.csv  quotes_uXRP.csv  summary.py
reports/: README.md  USUI_analysis_report.md  uADA_analysis_report.md  uAPT_analysis_report.md  uBERA_analysis_report.md  uBTC_analysis_report.md  uDOGE_analysis_report.md  uLINK_analysis_report.md  uNEAR_analysis_report.md  uPEPE_analysis_report.md  uSEI_analysis_report.md  uSHIB_analysis_report.md  uSOL_analysis_report.md  uXRP_analysis_report.md
