[project]
name = "weekly-analysis-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.3",
    "ipython>=9.2.0",
    "markdown-pdf>=1.7",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
]
